add config file get interface
